Autofill given name

--- a/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
@@ -48,7 +48,7 @@
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="honorifix-prefix"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="given-name"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e16-WH-8Ul">
                                 <rect key="frame" x="0.0" y="215.5" width="375" height="1"/>
