--- a/Pear/Controllers/Onboarding/Get Started Flow/Validate Phone Number/GetStartedValidatePhoneNumberCodeViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/Validate Phone Number/GetStartedValidatePhoneNumberCodeViewController.storyboard
@@ -38,43 +38,56 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Woot! Enter the code" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="B8U-jo-Rza">
-                                <rect key="frame" x="50" y="88" width="275" height="38.5"/>
+                                <rect key="frame" x="50" y="88" width="275" height="33"/>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6O-IB-Ulf">
-                                <rect key="frame" x="139" y="535" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="one-time-code"/>
-                            </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ozt-TU-Vu3">
-                                <rect key="frame" x="0.0" y="158.5" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="153" width="375" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Wdw-qx-9Se"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sent to " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dIm-pp-vX7">
-                                <rect key="frame" x="50" y="138.5" width="275" height="20"/>
+                                <rect key="frame" x="50" y="133" width="275" height="20"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="17"/>
                                 <color key="textColor" red="0.2666666667" green="0.29411764709999999" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FyY-LD-Kif">
-                                <rect key="frame" x="0.0" y="158.5" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="153" width="375" height="50"/>
                                 <connections>
                                     <action selector="verificationViewClicked:" destination="Ado-1d-w6I" eventType="touchUpInside" id="xFz-eo-dEe"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QKf-St-9De">
+                                <rect key="frame" x="20" y="297" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="LbA-bt-J6W"/>
+                                </constraints>
+                                <state key="normal" title="Resend code"/>
+                                <connections>
+                                    <action selector="resendCodeButtonClicked:" destination="Ado-1d-w6I" eventType="touchUpInside" id="uW3-Ix-4bx"/>
+                                </connections>
+                            </button>
+                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6O-IB-Ulf">
+                                <rect key="frame" x="16" y="617" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="one-time-code"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="B8U-jo-Rza" firstAttribute="top" secondItem="dJ9-P3-gJZ" secondAttribute="bottom" constant="8" id="3jf-5m-aBM"/>
                             <constraint firstItem="dJ9-P3-gJZ" firstAttribute="top" secondItem="UjZ-k3-3y6" secondAttribute="top" constant="20" id="8k3-U8-sve"/>
+                            <constraint firstItem="UjZ-k3-3y6" firstAttribute="bottom" secondItem="QKf-St-9De" secondAttribute="bottom" constant="320" id="CTs-qm-jY4"/>
                             <constraint firstItem="B8U-jo-Rza" firstAttribute="centerX" secondItem="UjZ-k3-3y6" secondAttribute="centerX" id="GZU-xr-C7P"/>
+                            <constraint firstItem="QKf-St-9De" firstAttribute="leading" secondItem="UjZ-k3-3y6" secondAttribute="leading" constant="20" id="Pcu-hC-pCJ"/>
                             <constraint firstItem="FyY-LD-Kif" firstAttribute="centerX" secondItem="Ozt-TU-Vu3" secondAttribute="centerX" id="RpZ-jf-UrV"/>
                             <constraint firstItem="FyY-LD-Kif" firstAttribute="width" secondItem="Ozt-TU-Vu3" secondAttribute="width" id="SE5-qO-fLM"/>
                             <constraint firstItem="Ozt-TU-Vu3" firstAttribute="centerX" secondItem="UjZ-k3-3y6" secondAttribute="centerX" id="TEZ-Lc-lsu"/>
@@ -88,11 +101,15 @@
                             <constraint firstItem="FyY-LD-Kif" firstAttribute="centerY" secondItem="Ozt-TU-Vu3" secondAttribute="centerY" id="s91-ua-JAA"/>
                             <constraint firstItem="B8U-jo-Rza" firstAttribute="leading" secondItem="UjZ-k3-3y6" secondAttribute="leading" constant="50" id="sOu-tX-8jx"/>
                             <constraint firstItem="dIm-pp-vX7" firstAttribute="top" secondItem="B8U-jo-Rza" secondAttribute="bottom" constant="12" id="tx2-bf-oNQ"/>
+                            <constraint firstItem="UjZ-k3-3y6" firstAttribute="trailing" secondItem="QKf-St-9De" secondAttribute="trailing" constant="20" id="x0R-gC-kbA"/>
+                            <constraint firstItem="QKf-St-9De" firstAttribute="centerX" secondItem="UjZ-k3-3y6" secondAttribute="centerX" id="yrY-Ix-7cJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="UjZ-k3-3y6"/>
                     </view>
                     <connections>
                         <outlet property="hiddenInputField" destination="P6O-IB-Ulf" id="tK8-lK-opb"/>
+                        <outlet property="nextButtonBottomConstraint" destination="CTs-qm-jY4" id="h2l-gj-zj8"/>
+                        <outlet property="resendCodeButton" destination="QKf-St-9De" id="Q6r-FS-lZV"/>
                         <outlet property="subtitleLabel" destination="dIm-pp-vX7" id="YhC-Hl-u1W"/>
                         <outlet property="verificationView" destination="Ozt-TU-Vu3" id="7Pf-ix-rKe"/>
                     </connections>
